- added Gesture class to KinectCOM - modified KinectCOM to integrate new class

--- a/KinectCOM/COMTest/KinectCOM.csproj
+++ b/KinectCOM/COMTest/KinectCOM.csproj
@@ -73,6 +73,7 @@
     <Compile Include="FeatureProcessor.cs" />
     <Compile Include="FeatureType.cs" />
     <Compile Include="FileLoader.cs" />
+    <Compile Include="Gesture.cs" />
     <Compile Include="GestureProcessor.cs" />
     <Compile Include="IKinect.cs" />
     <Compile Include="KinectData.cs" />
