- Created TrackingProcessor class to handle tracking decicions based on   selected strategy. - Heavy remodelling of current processors still required.

--- a/KinectCOM/COMTest/KinectCOM.csproj
+++ b/KinectCOM/COMTest/KinectCOM.csproj
@@ -117,6 +117,7 @@
     <Compile Include="RecognitionProcessor.cs" />
     <Compile Include="Skeleton2DdataCoordEventArgs.cs" />
     <Compile Include="Skeleton2DDataExtract.cs" />
+    <Compile Include="TrackingEngine.cs" />
     <Compile Include="UserFeature.cs" />
   </ItemGroup>
   <ItemGroup>
