--- a/KinectCOM/COMTest/KinectCOM.csproj
+++ b/KinectCOM/COMTest/KinectCOM.csproj
@@ -62,8 +62,9 @@
     <AssemblyOriginatorKeyFile>KinectSN.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Coding4Fun.Kinect.WinForm">
-      <HintPath>D:\Dropbox\UniWork\CSC9Z7\KinectPrototype\KinectPrototype\ExtLibs\Coding4Fun.Kinect.WinForm.dll</HintPath>
+    <Reference Include="Coding4Fun.Kinect.WinForm, Version=1.5.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Kinect\libs\KinectCOM\Coding4Fun.Kinect.WinForm.dll</HintPath>
     </Reference>
     <Reference Include="Emgu.CV">
       <HintPath>D:\Dropbox\UniWork\CSC9Z7\KinectPrototype\KinectPrototype\ExtLibs\Emgu.CV.dll</HintPath>
@@ -100,10 +101,13 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BodyFeatureDetector.cs" />
     <Compile Include="DataStore.cs" />
     <Compile Include="Device.cs" />
     <Compile Include="DtwGestureRecognizer.cs" />
+    <Compile Include="FaceDetector.cs" />
     <Compile Include="FaceProcessor.cs" />
+    <Compile Include="RecognitionEngine.cs" />
     <Compile Include="FeatureProcessor.cs" />
     <Compile Include="FeatureType.cs" />
     <Compile Include="FileLoader.cs" />
@@ -115,6 +119,7 @@
     <Compile Include="ObjectPointer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RecognitionProcessor.cs" />
+    <Compile Include="Recognizer.cs" />
     <Compile Include="Skeleton2DdataCoordEventArgs.cs" />
     <Compile Include="Skeleton2DDataExtract.cs" />
     <Compile Include="TrackingEngine.cs" />
