- Extended TrackingEngine - Added SkeletonHandler to handle lost and found skeletons on each pass - Added an Attempt variable to the User class to keep track of the number of recognition attempts. - TrackingEngine now switches between users created for each skeleton and tries to match it to a recognized user.

--- a/KinectCOM/COMTest/KinectCOM.csproj
+++ b/KinectCOM/COMTest/KinectCOM.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Recognizer.cs" />
     <Compile Include="Skeleton2DdataCoordEventArgs.cs" />
     <Compile Include="Skeleton2DDataExtract.cs" />
+    <Compile Include="SkeletonHandler.cs" />
     <Compile Include="TrackingEngine.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
